[gd_scene load_steps=2 format=3 uid="uid://bcraftingstationui"]

[ext_resource type="Script" path="res://scripts/ui/CraftingStationUI.gd" id="1"]

[node name="CraftingStationUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MainPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Header" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="StationTitle" type="Label" parent="MainPanel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Crafting Station"
horizontal_alignment = 1

[node name="CloseBtn" type="Button" parent="MainPanel/VBoxContainer/Header"]
layout_mode = 2
text = "âœ•"

[node name="ContentContainer" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaterialsTitle" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2
text = "Required Materials"
horizontal_alignment = 1

[node name="MaterialsList" type="ScrollContainer" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="MaterialsContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer/LeftPanel/MaterialsList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterPanel" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CraftingArea" type="Panel" parent="MainPanel/VBoxContainer/ContentContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftingContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer/CenterPanel/CraftingArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
alignment = 1

[node name="CraftingTitle" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/CenterPanel/CraftingArea/CraftingContainer"]
layout_mode = 2
text = "Crafting Process"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="MainPanel/VBoxContainer/ContentContainer/CenterPanel/CraftingArea/CraftingContainer"]
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/CenterPanel/CraftingArea/CraftingContainer"]
layout_mode = 2
text = "Ready to craft"
horizontal_alignment = 1

[node name="CraftBtn" type="Button" parent="MainPanel/VBoxContainer/ContentContainer/CenterPanel/CraftingArea/CraftingContainer"]
layout_mode = 2
text = "Start Crafting"

[node name="RightPanel" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RecipesTitle" type="Label" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
text = "Available Recipes"
horizontal_alignment = 1

[node name="RecipesList" type="ScrollContainer" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipesContainer" type="VBoxContainer" parent="MainPanel/VBoxContainer/ContentContainer/RightPanel/RecipesList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomPanel" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2

[node name="SkillInfo" type="Label" parent="MainPanel/VBoxContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Skill Level: 1"

[node name="ResultPreview" type="Label" parent="MainPanel/VBoxContainer/BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Expected Quality: Good"
horizontal_alignment = 2